[project]
name = "gradioagnointegrationtest"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "agno>=1.7.5",
    "fastapi>=0.116.1",
    "google-generativeai>=0.8.5",
    "gradio>=5.38.2",
    "mcp>=1.12.0",
    "reportlab>=4.4.3",
]
